--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "typescript": "^5.7.3",
     "vitest": "^3.0.7"
   },
-  "private": true
+  "private": true,
+  "dependencies": {
+    "linkedom": "^0.18.9"
+  }
 }
